--- a/assets/scss/sections/_above_the_fold.scss
+++ b/assets/scss/sections/_above_the_fold.scss
@@ -1,6 +1,6 @@
 .above-the-fold{
     position: relative;
-    z-index: -3;
+    z-index: -1;
     padding-bottom: 60px;
     &__bg{
         height: 100%;
